add all locales

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">App Locale 2</string>
+    <string name="app_name" translatable="false">App Locale Mod</string>
     <string name="xposed_description">Set language on a per-app basis</string>
 
     <string name="loading_apps">Loading Apps&#8230;</string>
@@ -10,88 +10,4 @@
     <string name="choose_languages_cancel">Cancel</string>
     <string name="show_system_apps">Show system apps</string>
     <string name="show_only_modified_apps">Show only modified apps</string>
-
-    <string-array name="locales" translatable="false">
-        <item>ar-EG</item>
-        <item>ar-IL</item>
-        <item>ar-SA</item>
-        <item>be</item>
-        <item>bg</item>
-        <item>ca</item>
-        <item>cs</item>
-        <item>cy</item>
-        <item>da-DK</item>
-        <item>de-AT</item>
-        <item>de-CH</item>
-        <item>de-DE</item>
-        <item>de-LI</item>
-        <item>el</item>
-        <item>en-AU</item>
-        <item>en-CA</item>
-        <item>en-GB</item>
-        <item>en-IE</item>
-        <item>en-IN</item>
-        <item>en-NZ</item>
-        <item>en-SG</item>
-        <item>en-US</item>
-        <item>en-ZA</item>
-        <item>eo</item>
-        <item>es-ES</item>
-        <item>es-US</item>
-        <item>et</item>
-        <item>eu</item>
-        <item>fa</item>
-        <item>fi</item>
-        <item>fo</item>
-        <item>fr-BE</item>
-        <item>fr-CA</item>
-        <item>fr-CH</item>
-        <item>fr-FR</item>
-        <item>gl</item>
-        <item>he</item>
-        <item>hi</item>
-        <item>hr</item>
-        <item>hu</item>
-        <item>ia</item>
-        <item>id</item>
-        <item>io</item>
-        <item>is</item>
-        <item>it-CH</item>
-        <item>it-IT</item>
-        <item>ja</item>
-        <item>jbo</item>
-        <item>kk</item>
-        <item>kl</item>
-        <item>ko</item>
-        <item>lb</item>
-        <item>lt</item>
-        <item>lv</item>
-        <item>mn</item>
-        <item>ms</item>
-        <item>nb</item>
-        <item>nn</item>
-        <item>no</item>
-        <item>nl-BE</item>
-        <item>nl-NL</item>
-        <item>pl</item>
-        <item>pt-BR</item>
-        <item>pt-PT</item>
-        <item>ro</item>
-        <item>ru</item>
-        <item>sk</item>
-        <item>sl</item>
-        <item>sq</item>
-        <item>sr</item>
-        <item>sv</item>
-        <item>ta</item>
-        <item>th</item>
-        <item>tr</item>
-        <item>uk</item>
-        <item>vi</item>
-        <item>vo</item>
-        <item>zh-CN</item>
-        <item>zh-HK</item>
-        <item>zh-SG</item>
-        <item>zh-TW</item>
-    </string-array>
 </resources>
